tests/copies/newAndNeedChangeTests/pass/Transient.java
package pass;

public class Transient {
  public boolean isTransient() {
    return true;
  }
}
