tests/copies/newAndNeedChangeTests/fail/Volatile.java
package fail;

import java.lang.System;

public class Volatile {

  public static void main(String[] args ) {
    boolean volatile = true;
  }

}
